# cxx_design_pattern

./: .gitignore
strategy/include/: duck.hpp  fly_behavior.hpp  fly_noway.hpp  fly_with_wings.hpp  mallard_duck.hpp  model_duck.hpp  mute_quack.hpp  quack.hpp  quack_behavior.hpp  squeak.hpp
strategy/main/: CMakeLists.txt  duck_simulator.cpp
